--- a/_data/coauthors.yml
+++ b/_data/coauthors.yml
@@ -32,3 +32,61 @@
 "Planck":
   - firstname: ["Max"]
     url: https://en.wikipedia.org/wiki/Max_Planck
+
+"Suri":
+  - firstname: ["Saksham"]
+    url: https://www.cs.umd.edu/~sakshams/
+
+"Gwilliam":
+  - firstname: ["Matthew"]
+    url: https://mgwillia.github.io/
+
+"Shrivastava":
+  - firstname: ["Abhinav"]
+    url: https://www.cs.umd.edu/~abhinav/
+
+"Gadde":
+  - firstname: ["Ravi Teja"]
+    url: https://scholar.google.com/citations?user=7heU14QAAAAJ&hl=en
+
+"Yamaguchi<sup>†</sup>":
+  - firstname: ["Yosuke"]
+    url: https://scholar.google.com/citations?user=mjrafDkAAAAJ&hl=en&oi=sra
+
+"Yamaguchi":
+  - firstname: ["Yosuke"]
+    url: https://scholar.google.com/citations?user=mjrafDkAAAAJ&hl=en&oi=sra
+
+"Agarwal":
+  - firstname: ["Vatsal"]
+    url: https://scholar.google.com/citations?user=DJRhPVgAAAAJ&hl=en
+
+
+"Padmanabhan":
+  - firstname: ["Namitha"]
+    url: https://www.cs.umd.edu/people/namithap
+
+"Swaminathan":
+  - firstname: ["Archana"]
+    url: https://archana1998.github.io/
+
+"Zhou":
+  - firstname: ["Tianyi"]
+    url: https://tianyizhou.github.io/
+
+"Bhardwaj":
+  - firstname: ["Aditya"]
+    url: https://scholar.google.com/citations?user=V8Q9EYQAAAAJ&hl=en
+
+"Ajani":
+  - firstname: ["Bhavya"]
+    url: https://scholar.google.com/citations?user=V8Q9EYQAAAAJ&hl=en
+
+
+"Mathur":
+  - firstname: ["Praful"]
+    url: https://scholar.google.com/citations?user=K46SOLsAAAAJ&hl=en
+
+"Park":
+  - firstname: ["Jun-Sung"]
+    url: https://www.researchgate.net/scientific-contributions/Jun-Sung-Park-2172051278
